logs/rtt.20260326-083422.log
   Compiling apas-verus v0.1.0 (/home/milnes/projects/APAS-VERUS-agent3)
error[E0433]: failed to resolve: could not find `Chap56` in `apas_verus`
 --> tests/Chap57/TestDijkstraStEphU64.rs:8:17
  |
8 | use apas_verus::Chap56::SSSPResultStEphI64::SSSPResultStEphI64::*;
  |                 ^^^^^^ could not find `Chap56` in `apas_verus`

error[E0433]: failed to resolve: could not find `Chap57` in `apas_verus`
 --> tests/Chap57/TestDijkstraStEphU64.rs:9:17
  |
9 | use apas_verus::Chap57::DijkstraStEphU64::DijkstraStEphU64::*;
  |                 ^^^^^^ could not find `Chap57` in `apas_verus`

error[E0433]: failed to resolve: could not find `Chap56` in `apas_verus`
 --> tests/Chap56/TestSSSPResultStEphI64.rs:7:17
  |
7 | use apas_verus::Chap56::SSSPResultStEphI64::SSSPResultStEphI64::*;
  |                 ^^^^^^ could not find `Chap56` in `apas_verus`

error[E0433]: failed to resolve: could not find `Chap62` in `apas_verus`
  --> tests/Chap62/TestStarContractionStEph.rs:10:17
   |
10 | use apas_verus::Chap62::StarContractionStEph::StarContractionStEph::*;
   |                 ^^^^^^ could not find `Chap62` in `apas_verus`

error[E0433]: failed to resolve: could not find `Chap62` in `apas_verus`
 --> tests/Chap62/TestStarPartitionStEph.rs:7:17
  |
7 | use apas_verus::Chap62::StarPartitionStEph::StarPartitionStEph::*;
  |                 ^^^^^^ could not find `Chap62` in `apas_verus`

error[E0433]: failed to resolve: use of undeclared type `SSSPResultStEphI64`
  --> tests/Chap56/TestSSSPResultStEphI64.rs:12:18
   |
12 |     let result = SSSPResultStEphI64::new(5, 0);
   |                  ^^^^^^^^^^^^^^^^^^ use of undeclared type `SSSPResultStEphI64`

error[E0433]: failed to resolve: use of undeclared type `SSSPResultStEphI64`
  --> tests/Chap56/TestSSSPResultStEphI64.rs:21:22
   |
21 |     let mut result = SSSPResultStEphI64::new(3, 0);
   |                      ^^^^^^^^^^^^^^^^^^ use of undeclared type `SSSPResultStEphI64`

error[E0433]: failed to resolve: use of undeclared type `SSSPResultStEphI64`
  --> tests/Chap56/TestSSSPResultStEphI64.rs:30:22
   |
30 |     let mut result = SSSPResultStEphI64::new(3, 0);
   |                      ^^^^^^^^^^^^^^^^^^ use of undeclared type `SSSPResultStEphI64`

error[E0433]: failed to resolve: use of undeclared type `SSSPResultStEphI64`
  --> tests/Chap56/TestSSSPResultStEphI64.rs:39:22
   |
39 |     let mut result = SSSPResultStEphI64::new(4, 0);
   |                      ^^^^^^^^^^^^^^^^^^ use of undeclared type `SSSPResultStEphI64`

error[E0433]: failed to resolve: use of undeclared type `SSSPResultStEphI64`
  --> tests/Chap56/TestSSSPResultStEphI64.rs:57:18
   |
57 |     let result = SSSPResultStEphI64::new(3, 0);
   |                  ^^^^^^^^^^^^^^^^^^ use of undeclared type `SSSPResultStEphI64`

For more information about this error, try `rustc --explain E0433`.
error: could not compile `apas-verus` (test "TestSSSPResultStEphI64") due to 6 previous errors
warning: build failed, waiting for other jobs to finish...
error[E0425]: cannot find function `dijkstra` in this scope
  --> tests/Chap57/TestDijkstraStEphU64.rs:30:18
   |
30 |     let result = dijkstra(&graph, 0);
   |                  ^^^^^^^^ not found in this scope

error[E0425]: cannot find function `contract_to_vertices` in this scope
  --> tests/Chap62/TestStarContractionStEph.rs:31:18
   |
31 |     let result = contract_to_vertices(&graph);
   |                  ^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `star_contract` in this scope
  --> tests/Chap62/TestStarContractionStEph.rs:48:18
   |
48 |     let result = star_contract(&graph, &base, &expand, Ghost::assume_new());
   |                  ^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `dijkstra` in this scope
  --> tests/Chap57/TestDijkstraStEphU64.rs:63:18
   |
63 |     let result = dijkstra(&graph, 0);
   |                  ^^^^^^^^ not found in this scope

error[E0425]: cannot find function `contract_to_vertices` in this scope
  --> tests/Chap62/TestStarContractionStEph.rs:57:18
   |
57 |     let result = contract_to_vertices(&graph);
   |                  ^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `dijkstra` in this scope
  --> tests/Chap57/TestDijkstraStEphU64.rs:80:18
   |
80 |     let result = dijkstra(&graph, 0);
   |                  ^^^^^^^^ not found in this scope

error[E0425]: cannot find function `dijkstra` in this scope
  --> tests/Chap57/TestDijkstraStEphU64.rs:97:18
   |
97 |     let result = dijkstra(&graph, 0);
   |                  ^^^^^^^^ not found in this scope

error[E0425]: cannot find function `dijkstra` in this scope
   --> tests/Chap57/TestDijkstraStEphU64.rs:118:18
    |
118 |     let result = dijkstra(&graph, 0);
    |                  ^^^^^^^^ not found in this scope

error[E0425]: cannot find function `dijkstra` in this scope
   --> tests/Chap57/TestDijkstraStEphU64.rs:143:18
    |
143 |     let result = dijkstra(&graph, 0);
    |                  ^^^^^^^^ not found in this scope

error[E0425]: cannot find function `dijkstra` in this scope
   --> tests/Chap57/TestDijkstraStEphU64.rs:166:18
    |
166 |     let result = dijkstra(&graph, 0);
    |                  ^^^^^^^^ not found in this scope

error[E0425]: cannot find function `contract_to_vertices` in this scope
  --> tests/Chap62/TestStarContractionStEph.rs:68:18
   |
68 |     let result = contract_to_vertices(&graph);
   |                  ^^^^^^^^^^^^^^^^^^^^ not found in this scope

Some errors have detailed explanations: E0425, E0433.
For more information about an error, try `rustc --explain E0425`.
error: could not compile `apas-verus` (test "TestStarContractionStEph") due to 5 previous errors
error: could not compile `apas-verus` (test "TestDijkstraStEphU64") due to 9 previous errors
error[E0425]: cannot find function `sequential_star_partition` in this scope
  --> tests/Chap62/TestStarPartitionStEph.rs:44:36
   |
44 |     let (centers, partition_map) = sequential_star_partition(&graph);
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0282]: type annotations needed
  --> tests/Chap62/TestStarPartitionStEph.rs:47:16
   |
47 |     assert_eq!(partition_map.len(), 6);
   |                ^^^^^^^^^^^^^ cannot infer type

error[E0282]: type annotations needed
  --> tests/Chap62/TestStarPartitionStEph.rs:53:19
   |
53 |     for center in centers.iter() {
   |                   ^^^^^^^ cannot infer type

error[E0425]: cannot find function `sequential_star_partition` in this scope
  --> tests/Chap62/TestStarPartitionStEph.rs:67:36
   |
67 |     let (centers, partition_map) = sequential_star_partition(&graph);
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0282]: type annotations needed
  --> tests/Chap62/TestStarPartitionStEph.rs:71:13
   |
71 |     assert!(centers.size() >= 1 && centers.size() <= 5);
   |             ^^^^^^^ cannot infer type

error[E0282]: type annotations needed
  --> tests/Chap62/TestStarPartitionStEph.rs:75:22
   |
75 |         let center = partition_map.get(&v).unwrap();
   |                      ^^^^^^^^^^^^^ cannot infer type

error[E0425]: cannot find function `sequential_star_partition` in this scope
  --> tests/Chap62/TestStarPartitionStEph.rs:83:36
   |
83 |     let (centers, partition_map) = sequential_star_partition(&graph);
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0282]: type annotations needed
  --> tests/Chap62/TestStarPartitionStEph.rs:86:16
   |
86 |     assert_eq!(partition_map.len(), graph.sizeV() as usize);
   |                ^^^^^^^^^^^^^ cannot infer type

error[E0282]: type annotations needed
  --> tests/Chap62/TestStarPartitionStEph.rs:89:19
   |
89 |     for center in centers.iter() {
   |                   ^^^^^^^ cannot infer type

error[E0425]: cannot find function `sequential_star_partition` in this scope
   --> tests/Chap62/TestStarPartitionStEph.rs:103:36
    |
103 |     let (centers, partition_map) = sequential_star_partition(&graph);
    |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0282]: type annotations needed
   --> tests/Chap62/TestStarPartitionStEph.rs:105:16
    |
105 |     assert_eq!(centers.size(), 0);
    |                ^^^^^^^ cannot infer type

error[E0282]: type annotations needed
   --> tests/Chap62/TestStarPartitionStEph.rs:106:16
    |
106 |     assert_eq!(partition_map.len(), 0);
    |                ^^^^^^^^^^^^^ cannot infer type

error[E0425]: cannot find function `sequential_star_partition` in this scope
   --> tests/Chap62/TestStarPartitionStEph.rs:115:36
    |
115 |     let (centers, partition_map) = sequential_star_partition(&graph);
    |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0282]: type annotations needed
   --> tests/Chap62/TestStarPartitionStEph.rs:118:16
    |
118 |     assert_eq!(centers.size(), 1);
    |                ^^^^^^^ cannot infer type

error[E0282]: type annotations needed
   --> tests/Chap62/TestStarPartitionStEph.rs:120:16
    |
120 |     assert_eq!(partition_map.get(&0), Some(&0));
    |                ^^^^^^^^^^^^^ cannot infer type

Some errors have detailed explanations: E0282, E0425, E0433.
For more information about an error, try `rustc --explain E0282`.
error: could not compile `apas-verus` (test "TestStarPartitionStEph") due to 16 previous errors
error: command `/home/milnes/.rustup/toolchains/1.94.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --message-format json-render-diagnostics --release` exited with code 101
Elapsed: 10s
